--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>The Gallery Cafe</h1>
     <hr>
     <h2>About Us</h2>
-    <p>Lorem ipsum, Lorem ipsum dolor sit amet. dolor sit amet consectetur adipisicing elit. Rem magnam illum modi neque quidem obcaecati eveniet quas, quisquam omnis excepturi<br> 
+    <p>Lorem ipsum, <strong>Lorem ipsum dolor sit amet.</strong> dolor sit amet consectetur adipisicing elit. Rem magnam illum modi neque quidem obcaecati eveniet quas, quisquam omnis excepturi<br> 
         culpa aperiam cupiditate? Minima, consectetur. Perspiciatis sit libero provident natus?</p>
     <p><a href="#">Rate us</a> <a href="#">Follow us</a></p>
     <hr>
@@ -38,15 +38,15 @@
     <h1>Contact</h1>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nulla nostrum temporibus consectetur. Et ducimus tempore, sunt soluta cumque optio, sed hic numquam perspiciatis id<br>
-        voluptatibus ad. Praesentium doloremque repellat quo, The Biggest Dhaba Chain dolorum voluptatem eveniet. Aut ad possimus modi, asperiores iste incidunt vero. Doloremque<br>
+        voluptatibus ad. Praesentium doloremque repellat quo, <strong>The Biggest Dhaba Chain</strong> dolorum voluptatem eveniet. Aut ad possimus modi, asperiores iste incidunt vero. Doloremque<br>
         culpa quae quisquam ipsum qui neque esse voluptatum, numquam quo unde porro expedita veritatis fugiat non laboriosam voluptates animi nemo molestias eveniet reiciendis error<br>
-        iure nulla debitis! Voluptate cupiditate sunt saepe voluptatibus aspernatur. Atque eaque necessitatibus reiciendis sed pariatur sunt fugiat iusto eveniet inventore aliquam<br>
+        iure <strong>nulla debitis! Voluptate cupiditate sunt saepe voluptatibus aspernatur. Atque eaque necessitatibus reiciendis sed pariatur sunt fugiat iusto eveniet inventore</strong> aliquam<br>
         autem corporis ab exercitationem labore deleniti nihil enim, totam at expedita error. Veritatis repellendus amet dolor error expedita a facilis nulla sapiente doloremque neque<br>
         deserunt illum dignissimos sequi nesciunt consequatur minima rerum in fugit est, voluptatum quibusdam. Dicta, neque earum enim ea incidunt, aut quis quia sapiente rerum<br>
-        architecto ab esse labore! Illum fugiat amet, possimus eius optio aspernatur est suscipit asperiores molestias corrupti beatae, consectetur tempora placeat ipsam ex, eaque quo.<br>
+        architecto ab esse labore! Illum fugiat <strong>amet, possimus eius</strong> optio aspernatur est suscipit asperiores molestias corrupti beatae, consectetur tempora placeat ipsam ex, eaque quo.<br>
         Aliquid voluptas ad beatae itaque veritatis animi sed odio autem ipsum inventore est incidunt ut facere fugit distinctio, non id natus. Nulla saepe molestias dolorum, veniam ipsum<br>
         excepturi quos nihil quas minus corrupti at officiis facere labore asperiores nisi aperiam. Vitae ex ullam nihil tenetur, doloribus possimus eaque magnam ipsum molestiae quasi,<br>
-        tempora dolor, reiciendis nisi ab eveniet? Ratione, officia provident totam quam nulla distinctio eos molestias eligendi neque, ab animi beatae non explicabo ipsam accusamus,<br>
+        tempora dolor, reiciendis nisi ab eveniet? Ratione, officia provident <strong>totam quam nulla distinctio eos molestias eligendi neque, ab animi beatae</strong> non explicabo ipsam accusamus,<br>
         saepe doloremque nobis et sed amet numquam vitae. Ipsam, itaque debitis odit quibusdam alias consequatur deleniti quas ea blanditiis exercitationem sapiente impedit a iste<br>
         nesciunt sint deserunt eligendi autem? Maiores illo nobis est delectus recusandae, sit vel obcaecati voluptates sint iusto, dolores ipsa eum, maxime odio architecto repellat aliquid<br>
         incidunt amet. Aliquid perferendis a quas exercitationem numquam doloribus beatae quia soluta consequatur quasi dicta culpa porro, itaque
